--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  box-sizing: inherit; }
+
 body {
   margin: 0;
   padding: 0; }
@@ -33,5 +39,11 @@ body {
     margin-bottom: 0; }
   .square:nth-child(4n) {
     margin-right: 0; }
+
+.button {
+  background: transparent;
+  border: 2px solid #fff;
+  height: 50px;
+  width: 50px; }
 
 /*# sourceMappingURL=main.css.map */
