--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin:0; 
   padding:0; 
@@ -42,4 +49,11 @@ body {
   &:nth-child(4n) {
     margin-right: 0;
   }
+}
+
+.button {
+  background: transparent;
+  border: 2px solid #fff;
+  height: 50px;
+  width: 50px;
 }
