--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,20 @@ html {
 
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif; }
+
+.svg-wrap {
+  display: none; }
+
+.gallery {
+  overflow: hidden; }
 
 #content {
   height: 100%;
-  margin: 20px; }
+  margin: 35px; }
+  #content .title {
+    margin-top: -40px; }
 
 #lightbox {
   display: none;
@@ -23,10 +32,12 @@ body {
   text-align: center; }
 
 #lightbox img {
+  border: 12px solid #fff;
+  border-bottom: 50px solid #fff;
   box-shadow: 0 0 25px #111;
   -webkit-box-shadow: 0 0 25px #111;
   -moz-box-shadow: 0 0 25px #111;
-  max-height: 90%; }
+  max-height: 80%; }
 
 .square {
   width: 24.25%;
@@ -41,6 +52,9 @@ body {
     margin-right: 0; }
 
 .button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   background: transparent;
   border: 2px solid #fff;
   height: 50px;
