--- a/css/main.scss
+++ b/css/main.scss
@@ -9,10 +9,29 @@ body {
   margin:0; 
   padding:0; 
   font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  text-align: center;
 }
 
 .svg-wrap {
   display: none;
+}
+
+#search {
+  width: 400px;
+  margin: 20px;
+  padding: 20px;
+  border: 2px solid #ccc;
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-size: 18px;
+  color: #666;
+  background: url('../search.svg') no-repeat;
+  background-size: 8%;
+  background-position: 3%;
+  padding-left: 60px;
+
+  &:focus {
+    outline: 0;
+  }
 }
 
 .gallery {
@@ -45,24 +64,48 @@ body {
   box-shadow: 0 0 25px #111;
   -webkit-box-shadow: 0 0 25px #111;
   -moz-box-shadow: 0 0 25px #111;
-  max-height: 80%;
+  max-height: 85%;
+  max-width: 90%;
 }
 
 .square {
-  width: 24.25%;
-  padding-bottom: 24.25%;
+  width: 100%;
+  padding-bottom: 100%;
   margin-right: 1%;
   margin-bottom: 1%;
   float: left;
   background-size: cover;
+  // opacity: 0.8;
+  // transition: opacity 100ms ease-in-out;
 
-  &:nth-child(n+4) {
-    margin-bottom: 0;
+  // &:hover {
+  //   opacity: 1;
+  // }
+
+  // 2 photos
+  @media (min-width: 500px) and (max-width: 839px) {
+    width: 49.5%;
+    padding-bottom: 49.5%;
+    &:nth-last-child(-n+2) {
+      margin-bottom: 0;
+    }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
   }
 
-  &:nth-child(4n) {
-    margin-right: 0;
+  // 3 photos
+  @media (min-width: 840px) {
+    width: 32.66667%;
+    padding-bottom: 32.66667%;
+    &:nth-last-child(-n+3) {
+      margin-bottom: 0;
+    }
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
+
 }
 
 .button {
