--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
   display: none; }
 
 #search {
-  width: 400px;
+  width: 300px;
   margin: 20px;
   padding: 20px;
   border: 2px solid #ccc;
@@ -25,6 +25,9 @@ body {
   background-size: 8%;
   background-position: 3%;
   padding-left: 60px; }
+  @media (min-width: 600px) {
+    #search {
+      width: 400px; } }
   #search:focus {
     outline: 0; }
 
