--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ body {
 }
 
 #search {
-  width: 400px;
+  width: 300px;
   margin: 20px;
   padding: 20px;
   border: 2px solid #ccc;
@@ -28,6 +28,10 @@ body {
   background-size: 8%;
   background-position: 3%;
   padding-left: 60px;
+
+  @media (min-width: 600px) {
+    width: 400px;
+  }
 
   &:focus {
     outline: 0;
