--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,15 @@ body {
 .gallery {
   overflow: hidden; }
 
+.close_icon {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  opacity: 0.5;
+  transition: opacity 100ms ease-in-out; }
+  .close_icon:hover {
+    opacity: 1; }
+
 #content {
   height: 100%;
   margin: 35px; }
