--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,9 @@ body {
 .svg-wrap {
   display: none; }
 
+/* 
+ * Search Box
+ */
 #search {
   width: 300px;
   margin: 20px;
@@ -31,9 +34,39 @@ body {
   #search:focus {
     outline: 0; }
 
+/* 
+ * Gallery
+ */
 .gallery {
   overflow: hidden; }
 
+.square {
+  width: 100%;
+  padding-bottom: 100%;
+  margin-right: 1%;
+  margin-bottom: 1%;
+  float: left;
+  background-size: cover; }
+  @media (min-width: 500px) and (max-width: 839px) {
+    .square {
+      width: 49.5%;
+      padding-bottom: 49.5%; }
+      .square:nth-last-child(-n+2) {
+        margin-bottom: 0; }
+      .square:nth-child(2n) {
+        margin-right: 0; } }
+  @media (min-width: 840px) {
+    .square {
+      width: 32.66667%;
+      padding-bottom: 32.66667%; }
+      .square:nth-last-child(-n+3) {
+        margin-bottom: 0; }
+      .square:nth-child(3n) {
+        margin-right: 0; } }
+
+/* 
+ * Light Box
+ */
 .close_icon {
   position: absolute;
   top: 30px;
@@ -67,38 +100,5 @@ body {
   -moz-box-shadow: 0 0 25px #111;
   max-height: 85%;
   max-width: 90%; }
-
-.square {
-  width: 100%;
-  padding-bottom: 100%;
-  margin-right: 1%;
-  margin-bottom: 1%;
-  float: left;
-  background-size: cover; }
-  @media (min-width: 500px) and (max-width: 839px) {
-    .square {
-      width: 49.5%;
-      padding-bottom: 49.5%; }
-      .square:nth-last-child(-n+2) {
-        margin-bottom: 0; }
-      .square:nth-child(2n) {
-        margin-right: 0; } }
-  @media (min-width: 840px) {
-    .square {
-      width: 32.66667%;
-      padding-bottom: 32.66667%; }
-      .square:nth-last-child(-n+3) {
-        margin-bottom: 0; }
-      .square:nth-child(3n) {
-        margin-right: 0; } }
-
-.button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: transparent;
-  border: 2px solid #fff;
-  height: 50px;
-  width: 50px; }
 
 /*# sourceMappingURL=main.css.map */
