--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -15,6 +16,10 @@ body {
 .svg-wrap {
   display: none;
 }
+
+/* 
+ * Search Box
+ */ 
 
 #search {
   width: 300px;
@@ -38,9 +43,50 @@ body {
   }
 }
 
+/* 
+ * Gallery
+ */ 
+
 .gallery {
   overflow: hidden;
 }
+
+.square {
+  width: 100%;
+  padding-bottom: 100%;
+  margin-right: 1%;
+  margin-bottom: 1%;
+  float: left;
+  background-size: cover;
+
+  // 2 photos
+  @media (min-width: 500px) and (max-width: 839px) {
+    width: 49.5%;
+    padding-bottom: 49.5%;
+    &:nth-last-child(-n+2) {
+      margin-bottom: 0;
+    }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+  }
+
+  // 3 photos
+  @media (min-width: 840px) {
+    width: 32.66667%;
+    padding-bottom: 32.66667%;
+    &:nth-last-child(-n+3) {
+      margin-bottom: 0;
+    }
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
+}
+
+/* 
+ * Light Box
+ */ 
 
 .close_icon {
   position: absolute;
@@ -82,54 +128,4 @@ body {
   -moz-box-shadow: 0 0 25px #111;
   max-height: 85%;
   max-width: 90%;
-}
-
-.square {
-  width: 100%;
-  padding-bottom: 100%;
-  margin-right: 1%;
-  margin-bottom: 1%;
-  float: left;
-  background-size: cover;
-  // opacity: 0.8;
-  // transition: opacity 100ms ease-in-out;
-
-  // &:hover {
-  //   opacity: 1;
-  // }
-
-  // 2 photos
-  @media (min-width: 500px) and (max-width: 839px) {
-    width: 49.5%;
-    padding-bottom: 49.5%;
-    &:nth-last-child(-n+2) {
-      margin-bottom: 0;
-    }
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-  }
-
-  // 3 photos
-  @media (min-width: 840px) {
-    width: 32.66667%;
-    padding-bottom: 32.66667%;
-    &:nth-last-child(-n+3) {
-      margin-bottom: 0;
-    }
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-  }
-
-}
-
-.button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: transparent;
-  border: 2px solid #fff;
-  height: 50px;
-  width: 50px;
 }
